--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
     
     </header>
     <div id="menu" class="fas fa-bars"></div>
+    <section class="home" id="home">
+
+        <h3>HI !</h3>
+        <h1>I'M <span>Sergiu Rotari</span></h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio deserunt aspernatur fugiat minus enim ullam repudiandae sint sed magnam tenetur! Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, at.
+        </p>
+        <a href="#about"><button class="btn">about me <i class="fas fa-user"></i></button></a>
+    
+    </section>
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
