--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
                     <li><a href="#">git</a></li>
                     <li><a href="#">figma</a></li>
                     <li><a href="#">json</a></li>
-                    
-                    
+
+
 
 
 
@@ -142,11 +142,10 @@
 
             </div>
 
-            <form action="">
+            <form action="mailto:sergiu.rotari.pro@gmail.com" class="form-inline">
 
                 <input type="text" placeholder="name" class="box">
                 <input type="email" placeholder="email" class="box">
-                <input type="text" placeholder="project" class="box">
                 <textarea name="" id="" cols="30" rows="10" class="box message" placeholder="message"></textarea>
                 <button type="submit" class="btn"> send <i class="fas fa-paper-plane"></i> </button>
 
